fixed issue of cropping on smaller screens

--- a/page_accueil/styles/page_accueil.css
+++ b/page_accueil/styles/page_accueil.css
@@ -168,7 +168,7 @@ titre de la page
 }
 
 #conteneur-titre-page-accueil.collapse {
-    height: 3vmin; 
+    height: 2.5em; 
     transition: height 0.3s ease; 
     position: sticky;
     top: 14vmin;
@@ -232,7 +232,6 @@ titre de la page
     }
 
     #conteneur-titre-page-accueil.collapse {
-        height: 15vmin; 
         transition: height 0.3s ease; 
     }
     #conteneur-titre-page-accueil.collapse h1{
@@ -1006,7 +1005,7 @@ deuxieme boite
     flex: 1; 
     width: 80%;
     height: 80%;
-    margin-top: 10vh;
+    margin-top: 10vmax;
 }
 
 #deuxieme-message-boite-deux h2,
@@ -1054,7 +1053,7 @@ troisieme boite
     flex: 1; 
     width: 80%;
     height: 80%;
-    margin-top: 10vh;
+    margin-top: 10vmax;
 }
 
 #deuxieme-message-boite-trois h2,
